# eziengine

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  buildRelease.sh  buildubuntu.sh  buildweb.sh  conanfile.py  test.json  test2.json
include/common/: EZIType.h
include/math/: EZIMath.h
include/reflection/: EZIReflection.h  EZIReflectionLegacy.h
include/serialization/: EZIDataStream.h  EZIDeserializer.h  EZISerialization.h  EZISerializer.h
include/template_pattern/: EZIRegister.hpp  EZIRegistry.hpp  EZISingleton.hpp
source/reflection/: EZIReflection.cpp  EZIReflectionLegacy.cpp
source/serialization/: EZIDataStream.cpp  EZISerialization.cpp
src/: CMakeLists.txt
src/debug/: EZIDebug.h
src/ecs/: EZIComponent.hpp
src/graphics/: EZIModel3D.h  EZIRenderService.cpp  EZIRenderService.h  EZIRenderer.cpp  EZIRenderer.h
src/memory/: EZIMemory.h
src/serialization/: EZIDataStream.h  EZIDeserializer.h  EZISerializer.h
test/: main.cpp
